# PDFium-rs

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: cargo_test.yml
examples/: README.md  export_pages.rs  export_pages_to_images.rs  extract_text.rs  import_pages.rs  import_pages_into_doc.rs  text_extract_search.rs
scripts/: install-hooks.sh
scripts/hooks/: pre-commit
src/: action.rs  annotation.rs  attachment.rs  availability.rs  bookmark.rs  clip_path.rs  clippath.rs  color.rs  destination.rs  error.rs  font.rs  form.rs  form_fill_info.rs  glyph_path.rs  guard.rs  javascript_action.rs  lib.rs  lib_config.rs  link.rs  matrix.rs  page_link.rs  page_object.rs  page_object_mark.rs  page_range.rs  path_segment.rs  rect.rs  search.rs  signature.rs  struct_element.rs  struct_element_attr.rs  struct_element_attr_value.rs  struct_tree.rs  system_font_info.rs  text_page.rs  x_object.rs  xobject.rs
src/bitmap/: mod.rs
src/c_api/: guard.rs  mod.rs  pdfium.rs  pdfium_bindings.rs  pdfium_constants.rs  pdfium_handle.rs  pdfium_init.rs  pdfium_private.rs  pdfium_types.rs
src/document/: mod.rs  reader.rs  writer.rs
src/page/: boundaries.rs  link.rs  mod.rs  object.rs  object_mark.rs  pages.rs  range.rs  render.rs
src/page/object/: mark.rs  mod.rs  objects.rs
src/page/text/: mod.rs  search.rs
src/pdfium_sys/: mod.rs  pdfium.rs  pdfium_bindings.rs  pdfium_constants.rs  pdfium_init.rs  pdfium_private.rs  pdfium_types.rs
