[package]
name = "pdfium"
version = "0.5.0"
edition = "2024"
description = "Modern Rust wrapper to PDFium, the PDF library from Google"
keywords = ["pdf", "pdfium"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/newinnovations/pdfium-rs"
homepage = "https://github.com/newinnovations/pdfium-rs"

[dependencies]
bitflags = "2.9.1"
libloading = "0.8.8"
image = "0.25.6"
parking_lot = "0.12.4"
